feat: add quantity tracker functions
